- wxTopLevelWindow::ShowFullScreen logic error fixed.
- Fixed wxScrollBar background colour bug.
- Fixed problems with paper sizes being ignored.
- wxNotebook refresh problem fixed.
- DDE fixed for Unicode.
- Fixed ownerdrawn multiline buttons.
- wxCheckListBox item background fixed.
- Fixed error when trying to read a value from key not accessible for writing.

wxWinCE:

- Fixed wxFileName::CreateTempFileName.

wxGTK:

- Added support for wxSTAY_ON_TOP (GTK 2.4+).
- Fixed wxTextCtrl::SetStyle for overlapping calls.
- Fixed scrollbar border colour.
- Added bitmap support in menus.

wxMac:

- Added support for launching 'APPL' bundles with wxExecute (usually they have a
  .app extension and are the ones that reside in the Applications folder).
- Fixed a bug in wxGetKeyState where shift and some other keys were returning an
  incorrect state.
- Fixed toolbar colour bug on Tiger.
- Fixed visual problems caused by removal of About menu item.
- Window menu now added automatically.
- Configure fixed for wxBase compilation.
- Modified function key support fixed.
- wxTopLevelWindow::Maximize improvements.

wxX11:

- Menu problems fixed.
- wxScrolledWindow scrolls any child windows.
- Fixed a font memory leak.
- Multiple wxTimers now work correctly.


2.6.0
-----

All:

- wxPathExists deprecated, use wxDirExists instead.
- Configure: --enable-std_iostreams, --enable-std_string are now the default.

All (GUI):

- Fixed ~wxStatusBar and ~wxToolBar which tried to check
  non-existent wxFrameBase RTTI, causing a crash if not in a frame.

wxMSW:

- Fixed static box border when the label is empty.
- Fixed SetBackgroundColour() to change only label background, not entire box.
- wxHelpController is now aliased to wxCHMHelpController.

wxWinCE:

- Fixed device origin setting and clipping region setting.

wxGTK:
- New configure syntax for specifying the GTK+ version.
    --with-gtk             Use GTK 2.x, no fallback
    --with-gtk=1           Use GTK 1.2, no fallback